use more website

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             class="ad"
           />
         </a>
-        <a href="reallygreatblog">
+        <a href="https://reallygreatblog.netlify.app/">
           <img
             src="images/blog.png"
             alt="w3schools css advertisement"
