use more website

--- a/index.html
+++ b/index.html
@@ -17,39 +17,49 @@
     <div id="blog">
       <div id="blog__content">
         <div class="blog__post">
-          <h2>Pink eye</h2>
-          <h3>September 14th, 2023</h3>
+          <h2>Advertising</h2>
+          <h3>September 18th, 2023</h3>
           <hr class="solid" />
           <div class="clearfix">
-            <p class="post__entry">
-              This blog was infected with pink eye. Conjunctivitis, also known
-              as pink eye, is inflammation of the outermost layer of the white
-              part of the eye and the inner surface of the eyelid. It makes the
-              eye appear pink or reddish. Pain, burning, scratchiness, or
-              itchiness may occur. The affected eye may have increased tears or
-              be "stuck shut" in the morning. Swelling of the white part of the
-              eye may also occur. Itching is more common in cases due to
-              allergies. Conjunctivitis can affect one or both eyes.
-            </p>
-            <img src="images/eye.png" alt="Pink eye" class="post__image" />
+            <article class="post__entry">
+              Website hosting is expensive! To offset the costs of hosting this
+              website, we here at Really great blog have decided to add ads to
+              the right side of our website. In the future, we may add ads to:
+              <ul>
+                <li>The left side of our website</li>
+                <li>The top of our website</li>
+                <li>The bottom of our website</li>
+                <li>Between each of the blog posts of our website</li>
+                <li>Your website</li>
+                <li>You</li>
+              </ul>
+            </article>
+            <aside>
+              <img
+                src="images/graph.png"
+                alt="A graph of our finances. It's not going well"
+                class="post__image"
+              />
+            </aside>
           </div>
         </div>
         <div class="blog__post">
-          <h2>Pink eye</h2>
-          <h3>September 14th, 2023</h3>
+          <h2>CS, CSS, and CS:S</h2>
+          <h3>September 17th, 2023</h3>
           <hr class="solid" />
           <div class="clearfix">
-            <p class="post__entry">
-              This blog was infected with pink eye. Conjunctivitis, also known
-              as pink eye, is inflammation of the outermost layer of the white
-              part of the eye and the inner surface of the eyelid. It makes the
-              eye appear pink or reddish. Pain, burning, scratchiness, or
-              itchiness may occur. The affected eye may have increased tears or
-              be "stuck shut" in the morning. Swelling of the white part of the
-              eye may also occur. Itching is more common in cases due to
-              allergies. Conjunctivitis can affect one or both eyes.
-            </p>
-            <img src="images/eye.png" alt="Pink eye" class="post__image" />
+            <article class="post__entry">
+              While this website uses CS (font) inside its CSS (cascading style
+              sheets), it does not use CS:S (game). I don't know how to install
+              CS:S on a website.
+            </article>
+            <aside>
+              <img
+                src="images/missingtexture.png"
+                alt="Pink eye"
+                class="post__image"
+              />
+            </aside>
           </div>
         </div>
         <div class="blog__post">
@@ -67,7 +77,9 @@
               eye may also occur. Itching is more common in cases due to
               allergies. Conjunctivitis can affect one or both eyes.
             </article>
-            <img src="images/eye.png" alt="Pink eye" class="post__image" />
+            <aside>
+              <img src="images/eye.png" alt="Pink eye" class="post__image" />
+            </aside>
           </div>
         </div>
       </div>
